--- a/App.Frontend/src/assets/i18n/landing/ar.json
+++ b/App.Frontend/src/assets/i18n/landing/ar.json
@@ -6,6 +6,9 @@
         "services": "الخدمات",
         "partners": "الشركاء",
         "contacts": "اتصل بنا"
+      },
+       "login" : {
+        "Login" : "تسجيل دخول"
       }
     }
   },
