--- a/App.Frontend/src/assets/i18n/landing/en.json
+++ b/App.Frontend/src/assets/i18n/landing/en.json
@@ -6,6 +6,9 @@
         "services" : "Services",
         "partners" : "Partners",
         "contacts" : "Contancts"
+      },
+      "login" : {
+        "Login" : "Login"
       }
     }
   },
