--- a/App.Frontend/public/assets/i18n/en/landing.json
+++ b/App.Frontend/public/assets/i18n/en/landing.json
@@ -2,8 +2,19 @@
   "header" : {
     "navbar" : {
       "links" : {
-        "home" : "Home"
+        "home" : "Home",
+        "services" : "Services",
+        "partners" : "Partners",
+        "contacts" : "Contancts"
+      },
+      "login" : {
+        "Login" : "Login"
       }
+    }
+  },
+  "footer" : {
+    "contact" : {
+      "address" : " Cairo Smart Village, Giza, Egypt"
     }
   }
 }
