Finish Transulation of system admin

--- a/App.Frontend/public/assets/i18n/ar/common.json
+++ b/App.Frontend/public/assets/i18n/ar/common.json
@@ -5,5 +5,21 @@
     "minLengthMessage": "الحد الأدنى للطول هو {{min}} حرفًا",
     "maxLengthMessage": "الحد الأقصى للطول هو {{max}} حرفًا",
     "patternMessage": "تنسيق غير صالح"
+  },
+  "sweetAlert": {
+    "danger": {
+      "confirmButtonText": "نعم احذفها",
+      "cancelButtonText": "تجاهل",
+      "swalTitle": "تم حذفها",
+      "swalText": "تم حذف  بنجاح",
+      "swalConfirmButtonText": "تم"
+    },
+    "warn": {
+      "confirmButtonText": "نعم استرجعها!",
+      "cancelButtonText": "تجاهل",
+      "swalTitle": "تم الاسترجاع!",
+      "swalText": "تم استرجاع الملف بنجاح.",
+      "swalConfirmButtonText": "تم"
+    }
   }
 }
